unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/breadwinner_ns__BW_Subscription_Line__c.object-meta.xml
<CustomObject>
    <label>NetSuite Subscription Line</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Subscription Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>