unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__CatalogType__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CatalogType__c</fullName>
    <label>Catalog Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>