unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__ClassInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ClassInternalId__c</fullName>
    <label>Class Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>