unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__IncludeInRenewal__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IncludeInRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Renewal Subscription</label>
    <type>Checkbox</type>
</CustomField>