unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__LineNumber__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>