unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__ProrateEndDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ProrateEndDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prorate End Date</label>
    <type>Checkbox</type>
</CustomField>