unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__RecurrenceStartDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RecurrenceStartDate__c</fullName>
    <label>Recurrence Start Date</label>
    <type>Date</type>
</CustomField>