unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__RenewalOption__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RenewalOption__c</fullName>
    <description>It stores one of the four renewal options for a subscription plan line record.</description>
    <label>Renewal Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>