unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__RevRecOption__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RevRecOption__c</fullName>
    <label>Revenue Recognition Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>