unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__SalesOrderLineNumber__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SalesOrderLineNumber__c</fullName>
    <label>Sales Order Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>