unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__Subscription__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subscription lookup for the subscription line and subscription plan lookup for the subscription plan line</description>
    <label>Subscription / Subscription Plan</label>
    <referenceTo>breadwinner_ns__BW_Subscription__c</referenceTo>
    <relationshipLabel>NetSuite Subscription Lines</relationshipLabel>
    <relationshipName>BWSubscriptionLines</relationshipName>
    <type>Lookup</type>
</CustomField>