unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__SubscriptionLineTypeName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SubscriptionLineTypeName__c</fullName>
    <description>Stores Subscription Line Type Or Type of Subscription Plan Line (both are same)</description>
    <label>Subscription Line Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>