unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__SubscriptionPlanInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SubscriptionPlanInternalId__c</fullName>
    <description>It stores the subscription plan Id of the subscription plan line or subscription line&#39;s subscription plan line&#39;s subscription plan Id</description>
    <label>Subscription Plan Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>