unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__SubscriptionPlanLineInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SubscriptionPlanLineInternalId__c</fullName>
    <description>Stores the subscription line&#39;s subscription plan line Id</description>
    <label>Subscription Plan Line Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>