unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__TerminationDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__TerminationDate__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>