unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/fields/breadwinner_ns__Total__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>