unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__NS_Object_Type__c</columns>
    <columns>breadwinner_ns__Subscription__c</columns>
    <columns>breadwinner_ns__Item__c</columns>
    <columns>breadwinner_ns__BillingMode__c</columns>
    <columns>breadwinner_ns__ProrateStartDate__c</columns>
    <columns>breadwinner_ns__ProrateEndDate__c</columns>
    <columns>breadwinner_ns__RevRecOption__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>