unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Line__c/listViews/breadwinner_ns__NetSuite_Subscription_Plan_Lines.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Subscription_Plan_Lines</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__Subscription__c</columns>
    <columns>breadwinner_ns__Item__c</columns>
    <columns>breadwinner_ns__BillingMode__c</columns>
    <columns>breadwinner_ns__IsRequired__c</columns>
    <columns>breadwinner_ns__ProrateStartDate__c</columns>
    <columns>breadwinner_ns__ProrateEndDate__c</columns>
    <columns>breadwinner_ns__RevRecOption__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>breadwinner_ns__NS_Object_Type__c</field>
        <operation>equals</operation>
        <value>SubscriptionPlanMember</value>
    </filters>
    <label>NetSuite Subscription Plan Lines</label>
</ListView>